# DocuParse

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
data/extract/: sample0.json  sample1.json
infrastructure/mongodb/: docker-compose.yaml
scripts/: create_test_pdfs.py
src/docuparse/: __init__.py  containers.py  error_handlers.py  ocr.py  processors.py  store.py  text_analysis.py
tests/: test_mongodb.py  test_pdf.py  test_store.py
